[gd_scene load_steps=12 format=3 uid="uid://cqd37qby15op2"]

[ext_resource type="Script" path="res://scripts/room_02_bedroom_day.gd" id="1_youmw"]
[ext_resource type="Texture2D" uid="uid://d0ku00257pyn6" path="res://assets/locations/02_bedroom.png" id="2_hvhpy"]
[ext_resource type="PackedScene" uid="uid://vn8ay56opuf" path="res://scenes/phone.tscn" id="3_hki8f"]
[ext_resource type="FontFile" uid="uid://cyoe0lu3ghnvg" path="res://assets/fonts/dogicapixelbold.ttf" id="4_op461"]
[ext_resource type="Script" path="res://scripts/labels/label_hospital.gd" id="5_jp5k3"]
[ext_resource type="FontFile" uid="uid://cebjma2udbg7" path="res://assets/fonts/dogicapixel.ttf" id="8_7jek1"]
[ext_resource type="Script" path="res://scripts/go_to_morgue.gd" id="8_djqr2"]

[sub_resource type="Animation" id="Animation_1skx1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-169, 311)]
}

[sub_resource type="Animation" id="Animation_kjfum"]
resource_name = "intro"
length = 6.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7, 5.46667, 5.96667),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(645, 9), Vector2(473, 9), Vector2(473, 9), Vector2(645, 9)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pgeh0"]
_data = {
"RESET": SubResource("Animation_1skx1"),
"intro": SubResource("Animation_kjfum")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1vksm"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
bg_color = Color(0, 0, 0, 0.498039)

[node name="room_02_police_station" type="Node2D"]
script = ExtResource("1_youmw")

[node name="02Bedroom" type="Sprite2D" parent="."]
z_index = -10
position = Vector2(320, 180)
texture = ExtResource("2_hvhpy")

[node name="Phone" parent="." instance=ExtResource("3_hki8f")]
position = Vector2(470, 40)

[node name="label" type="AnimationPlayer" parent="."]
root_node = NodePath("label")
libraries = {
"": SubResource("AnimationLibrary_pgeh0")
}

[node name="label" type="RichTextLabel" parent="label"]
clip_contents = false
offset_left = -169.0
offset_top = 311.0
offset_right = -1.0
offset_bottom = 331.0
theme_override_fonts/normal_font = ExtResource("4_op461")
theme_override_font_sizes/normal_font_size = 9
theme_override_styles/normal = SubResource("StyleBoxFlat_1vksm")
bbcode_enabled = true
text = "La Paz Hospital"
scroll_active = false
script = ExtResource("5_jp5k3")

[node name="morgue" type="TextureButton" parent="."]
offset_left = 155.0
offset_top = 47.0
offset_right = 198.0
offset_bottom = 238.0
script = ExtResource("8_djqr2")

[node name="Label" type="Label" parent="morgue"]
visible = false
layout_mode = 0
offset_left = 39.0
offset_top = 93.0
offset_right = 99.0
offset_bottom = 116.0
theme_override_fonts/font = ExtResource("8_7jek1")
theme_override_font_sizes/font_size = 8
text = "Enter"

[connection signal="button_down" from="morgue" to="morgue" method="_on_button_down"]
[connection signal="mouse_entered" from="morgue" to="morgue" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="morgue" to="morgue" method="_on_mouse_exited"]
